--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "description": "login button ",
   "main": "login-kairos.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^2.0.0"
+    "polymer": "Polymer/polymer#^2.0.0",
+    "polymerfire": "^2.2.1"
   },
   "devDependencies": {
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^2.0.0",
